Added some more html files

--- a/campaign/creatures/animals/img/index.html
+++ b/campaign/creatures/animals/img/index.html
@@ -51,6 +51,26 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="mossback_treant (1).jpg">
+      mossback treant (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="mossback_treant (2).jpg">
+      mossback treant (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="mossback_treant (3).jpg">
+      mossback treant (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="mossback_treant (4).jpg">
+      mossback treant (4).jpg
+     </a>
+    </li>
+    <li>
      <a href="oasis_dwellers (1).jpg">
       oasis dwellers (1).jpg
      </a>
@@ -103,6 +123,26 @@
     <li>
      <a href="sandstriders (4).jpg">
       sandstriders (4).jpg
+     </a>
+    </li>
+    <li>
+     <a href="shadowclaw_panther (1).jpg">
+      shadowclaw panther (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="shadowclaw_panther (2).jpg">
+      shadowclaw panther (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="shadowclaw_panther (3).jpg">
+      shadowclaw panther (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="shadowclaw_panther (4).jpg">
+      shadowclaw panther (4).jpg
      </a>
     </li>
     <li>
