--- a/campaign/creatures/animals/index.html
+++ b/campaign/creatures/animals/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Mossback_Treant.html">
+      Mossback Treant
+     </a>
+    </li>
+    <li>
      <a href="Oasis_Dweller.html">
       Oasis Dweller
      </a>
@@ -66,8 +71,33 @@
      </a>
     </li>
     <li>
+     <a href="Shadowclaw_Panther.html">
+      Shadowclaw Panther
+     </a>
+    </li>
+    <li>
      <a href="Sunfire_Serpent.html">
       Sunfire Serpent
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/mossback_treant (1).jpg">
+      img/mossback_treant (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/mossback_treant (2).jpg">
+      img/mossback_treant (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/mossback_treant (3).jpg">
+      img/mossback_treant (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/mossback_treant (4).jpg">
+      img/mossback_treant (4).jpg
      </a>
     </li>
     <li>
@@ -123,6 +153,26 @@
     <li>
      <a class="image-index-link" href="img/sandstriders (4).jpg">
       img/sandstriders (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/shadowclaw_panther (1).jpg">
+      img/shadowclaw_panther (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/shadowclaw_panther (2).jpg">
+      img/shadowclaw_panther (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/shadowclaw_panther (3).jpg">
+      img/shadowclaw_panther (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/shadowclaw_panther (4).jpg">
+      img/shadowclaw_panther (4).jpg
      </a>
     </li>
     <li>
