--- a/campaign/items/consumables/herbs/img/index.html
+++ b/campaign/items/consumables/herbs/img/index.html
@@ -71,6 +71,16 @@
      </a>
     </li>
     <li>
+     <a href="emberroot (1).jpg">
+      emberroot (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="emberroot (2).jpg">
+      emberroot (2).jpg
+     </a>
+    </li>
+    <li>
      <a href="frostbloom (1).jpg">
       frostbloom (1).jpg
      </a>
@@ -91,6 +101,26 @@
      </a>
     </li>
     <li>
+     <a href="frostvine (1).jpg">
+      frostvine (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="frostvine (2).jpg">
+      frostvine (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="frostvine (3).jpg">
+      frostvine (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="frostvine (4).jpg">
+      frostvine (4).jpg
+     </a>
+    </li>
+    <li>
      <a href="mirage_cacti (1).jpg">
       mirage cacti (1).jpg
      </a>
@@ -103,6 +133,26 @@
     <li>
      <a href="mirage_cacti (3).jpg">
       mirage cacti (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="moonshadow_herb (1).jpg">
+      moonshadow herb (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="moonshadow_herb (2).jpg">
+      moonshadow herb (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="moonshadow_herb (3).jpg">
+      moonshadow herb (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="moonshadow_herb (4).jpg">
+      moonshadow herb (4).jpg
      </a>
     </li>
     <li>
@@ -143,6 +193,26 @@
     <li>
      <a href="sand_dune_lily (4).jpg">
       sand dune lily (4).jpg
+     </a>
+    </li>
+    <li>
+     <a href="starbloom_blossom (1).jpg">
+      starbloom blossom (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="starbloom_blossom (2).jpg">
+      starbloom blossom (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="starbloom_blossom (3).jpg">
+      starbloom blossom (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="starbloom_blossom (4).jpg">
+      starbloom blossom (4).jpg
      </a>
     </li>
     <li>
@@ -203,6 +273,26 @@
     <li>
      <a href="twilight_vine_berries (5).jpg">
       twilight vine berries (5).jpg
+     </a>
+    </li>
+    <li>
+     <a href="whisperleaf (1).jpg">
+      whisperleaf (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="whisperleaf (2).jpg">
+      whisperleaf (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="whisperleaf (3).jpg">
+      whisperleaf (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="whisperleaf (4).jpg">
+      whisperleaf (4).jpg
      </a>
     </li>
    </ul>
