--- a/campaign/items/consumables/herbs/index.html
+++ b/campaign/items/consumables/herbs/index.html
@@ -56,13 +56,28 @@
      </a>
     </li>
     <li>
+     <a href="Emberroot.html">
+      Emberroot
+     </a>
+    </li>
+    <li>
      <a href="Frostbloom.html">
       Frostbloom
      </a>
     </li>
     <li>
+     <a href="Frostvine.html">
+      Frostvine
+     </a>
+    </li>
+    <li>
      <a href="Mirage_Cacti.html">
       Mirage Cacti
+     </a>
+    </li>
+    <li>
+     <a href="Moonshadow_Herb.html">
+      Moonshadow Herb
      </a>
     </li>
     <li>
@@ -76,6 +91,11 @@
      </a>
     </li>
     <li>
+     <a href="Starbloom_Blossom.html">
+      Starbloom Blossom
+     </a>
+    </li>
+    <li>
      <a href="Sunfire_Cactus.html">
       Sunfire Cactus
      </a>
@@ -83,6 +103,11 @@
     <li>
      <a href="Twilight_Vine.html">
       Twilight Vine
+     </a>
+    </li>
+    <li>
+     <a href="Whisperleaf.html">
+      Whisperleaf
      </a>
     </li>
     <li>
@@ -106,6 +131,16 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/emberroot (1).jpg">
+      img/emberroot (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/emberroot (2).jpg">
+      img/emberroot (2).jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/frostbloom (1).jpg">
       img/frostbloom (1).jpg
      </a>
@@ -126,6 +161,26 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/frostvine (1).jpg">
+      img/frostvine (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/frostvine (2).jpg">
+      img/frostvine (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/frostvine (3).jpg">
+      img/frostvine (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/frostvine (4).jpg">
+      img/frostvine (4).jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/mirage_cacti (1).jpg">
       img/mirage_cacti (1).jpg
      </a>
@@ -138,6 +193,26 @@
     <li>
      <a class="image-index-link" href="img/mirage_cacti (3).jpg">
       img/mirage_cacti (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/moonshadow_herb (1).jpg">
+      img/moonshadow_herb (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/moonshadow_herb (2).jpg">
+      img/moonshadow_herb (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/moonshadow_herb (3).jpg">
+      img/moonshadow_herb (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/moonshadow_herb (4).jpg">
+      img/moonshadow_herb (4).jpg
      </a>
     </li>
     <li>
@@ -178,6 +253,26 @@
     <li>
      <a class="image-index-link" href="img/sand_dune_lily (4).jpg">
       img/sand_dune_lily (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/starbloom_blossom (1).jpg">
+      img/starbloom_blossom (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/starbloom_blossom (2).jpg">
+      img/starbloom_blossom (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/starbloom_blossom (3).jpg">
+      img/starbloom_blossom (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/starbloom_blossom (4).jpg">
+      img/starbloom_blossom (4).jpg
      </a>
     </li>
     <li>
@@ -238,6 +333,26 @@
     <li>
      <a class="image-index-link" href="img/twilight_vine_berries (5).jpg">
       img/twilight_vine_berries (5).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/whisperleaf (1).jpg">
+      img/whisperleaf (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/whisperleaf (2).jpg">
+      img/whisperleaf (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/whisperleaf (3).jpg">
+      img/whisperleaf (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/whisperleaf (4).jpg">
+      img/whisperleaf (4).jpg
      </a>
     </li>
    </ul>
