--- a/campaign/locations/regions/Matella/Bakaria/Bakaria.html
+++ b/campaign/locations/regions/Matella/Bakaria/Bakaria.html
@@ -202,19 +202,46 @@
    <p>
     <ul>
      <li>
-      Moonshadow Herb: This herb, with its silvery leaves and delicate glow, only blooms under the light of the full moon. Known for its calming properties, it is used in herbal remedies to alleviate anxiety and promote restful sleep.
+      <a href="../../../../items/consumables/herbs/Moonshadow_Herb.html">
+       Moonshadow Herb
+      </a>
+      : This herb, with its silvery leaves and delicate glow, only blooms under the light of the full moon. Known for its calming properties, it is used in herbal remedies to alleviate anxiety and promote restful sleep.
      </li>
      <li>
-      Starbloom Blossom: A rare flower that blooms only during celestial events, such as meteor showers or lunar eclipses. Its petals emit a soft, twinkling luminescence and possess healing properties, aiding in the regeneration of wounds and soothing skin irritations.
+      <a href="../../../../items/consumables/herbs/Starbloom_Blossom.html">
+       Starbloom Blossom
+      </a>
+      : A rare flower that blooms only during celestial events, such as meteor showers or lunar eclipses. Its petals emit a soft, twinkling luminescence and possess healing properties, aiding in the regeneration of wounds and soothing skin irritations.
      </li>
      <li>
-      Emberroot: A fieryred root that thrives in the volcanic soils of Bakaria. When dried and ground, it releases a warm and spicy aroma. Emberroot is commonly used as a key ingredient in potions and culinary dishes, known for its ability to invigorate the senses and provide a burst of energy.
+      <a href="../../../../items/consumables/herbs/Emberroot.html">
+       Emberroot
+      </a>
+      : A fieryred root that thrives in the volcanic soils of Bakaria. When dried and ground, it releases a warm and spicy aroma.
+      <a href="../../../../items/consumables/herbs/Emberroot.html">
+       Emberroot
+      </a>
+      is commonly used as a key ingredient in potions and culinary dishes, known for its ability to invigorate the senses and provide a burst of energy.
      </li>
      <li>
-      Whisperleaf: Delicate and featherlight, the Whisperleaf is a silverygreen herb that grows in secluded groves. When crushed between fingers, it emits a gentle, melodic whisper. It is believed to have mystical properties, often used in rituals and potions associated with divination and communication with spirits.
+      <a href="../../../../items/consumables/herbs/Whisperleaf.html">
+       Whisperleaf
+      </a>
+      : Delicate and featherlight, the
+      <a href="../../../../items/consumables/herbs/Whisperleaf.html">
+       Whisperleaf
+      </a>
+      is a silverygreen herb that grows in secluded groves. When crushed between fingers, it emits a gentle, melodic whisper. It is believed to have mystical properties, often used in rituals and potions associated with divination and communication with spirits.
      </li>
      <li>
-      Frostvine: Found in the higher altitudes where cold winds prevail, the Frostvine boasts shimmering blue leaves that are cool to the touch. Its extracts are used to create salves and ointments that provide a numbing effect, making it useful for treating pain, reducing inflammation, and soothing muscle strains.
+      <a href="../../../../items/consumables/herbs/Frostvine.html">
+       Frostvine
+      </a>
+      : Found in the higher altitudes where cold winds prevail, the
+      <a href="../../../../items/consumables/herbs/Frostvine.html">
+       Frostvine
+      </a>
+      boasts shimmering blue leaves that are cool to the touch. Its extracts are used to create salves and ointments that provide a numbing effect, making it useful for treating pain, reducing inflammation, and soothing muscle strains.
      </li>
      <li>
       Tranquil Lily: A waterloving flower that blooms near serene lakes and tranquil ponds. The Tranquil Lily's petals shimmer in shades of serene blue and emit a subtle floral fragrance that calms the mind and eases emotional tension. It is often used in teas and infusions to promote relaxation and inner peace.
@@ -251,10 +278,20 @@
    <p>
     <ul>
      <li>
-      Shadowclaw Panther: These elusive panthers blend seamlessly with the shadows of the forest. With jetblack fur and piercing green eyes, they possess razorsharp claws and exceptional night vision, making them formidable hunters of the undergrowth.
+      <a href="../../../../creatures/animals/Shadowclaw_Panther.html">
+       Shadowclaw Panther
+      </a>
+      : These elusive panthers blend seamlessly with the shadows of the forest. With jetblack fur and piercing green eyes, they possess razorsharp claws and exceptional night vision, making them formidable hunters of the undergrowth.
      </li>
      <li>
-      Mossback Treant: Towering ancient treelike beings, Mossback Treants are guardians of the forest. Covered in lush moss and adorned with vibrant flowers, they possess a deep connection to the earth and can manipulate plant life to defend their domain.
+      <a href="../../../../creatures/animals/Mossback_Treant.html">
+       Mossback Treant
+      </a>
+      : Towering ancient treelike beings,
+      <a href="../../../../creatures/animals/Mossback_Treant.html">
+       Mossback Treant
+      </a>
+      are guardians of the forest. Covered in lush moss and adorned with vibrant flowers, they possess a deep connection to the earth and can manipulate plant life to defend their domain.
      </li>
      <li>
       Whisperwing Owl: These ethereal owls possess feathers that shift colors with the changing light. Masters of silent flight and acute hearing, they are known for their ability to communicate in hushed whispers, conveying messages between the creatures of the forest.
