Added some html files

--- a/campaign/creatures/animals/img/index.html
+++ b/campaign/creatures/animals/img/index.html
@@ -160,6 +160,26 @@
       sunfire serpents (3).jpg
      </a>
     </li>
+    <li>
+     <a href="whispering_owl (1).jpg">
+      whispering owl (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="whispering_owl (2).jpg">
+      whispering owl (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="whispering_owl (3).jpg">
+      whispering owl (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="whispering_owl (4).jpg">
+      whispering owl (4).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
