--- a/campaign/creatures/animals/index.html
+++ b/campaign/creatures/animals/index.html
@@ -81,6 +81,11 @@
      </a>
     </li>
     <li>
+     <a href="Whisperwing_Owl.html">
+      Whisperwing Owl
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/mossback_treant (1).jpg">
       img/mossback_treant (1).jpg
      </a>
@@ -188,6 +193,26 @@
     <li>
      <a class="image-index-link" href="img/sunfire_serpents (3).jpg">
       img/sunfire_serpents (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/whispering_owl (1).jpg">
+      img/whispering_owl (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/whispering_owl (2).jpg">
+      img/whispering_owl (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/whispering_owl (3).jpg">
+      img/whispering_owl (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/whispering_owl (4).jpg">
+      img/whispering_owl (4).jpg
      </a>
     </li>
    </ul>
