--- a/campaign/items/consumables/herbs/img/index.html
+++ b/campaign/items/consumables/herbs/img/index.html
@@ -196,6 +196,56 @@
      </a>
     </li>
     <li>
+     <a href="shimmering_wheat (1).jpg">
+      shimmering wheat (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="shimmering_wheat (2).jpg">
+      shimmering wheat (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="shimmering_wheat (3).jpg">
+      shimmering wheat (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="shimmering_wheat (4).jpg">
+      shimmering wheat (4).jpg
+     </a>
+    </li>
+    <li>
+     <a href="silverleaf_fruit (1).jpg">
+      silverleaf fruit (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="silverleaf_fruit (2).jpg">
+      silverleaf fruit (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="silverleaf_orchard (1).jpg">
+      silverleaf orchard (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="silverleaf_orchard (2).jpg">
+      silverleaf orchard (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="silverleaf_orchard (3).jpg">
+      silverleaf orchard (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="silverleaf_orchard (4).jpg">
+      silverleaf orchard (4).jpg
+     </a>
+    </li>
+    <li>
      <a href="starbloom_blossom (1).jpg">
       starbloom blossom (1).jpg
      </a>
@@ -236,6 +286,21 @@
      </a>
     </li>
     <li>
+     <a href="sunfire_grains (1).jpg">
+      sunfire grains (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sunfire_grains (2).jpg">
+      sunfire grains (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sunfire_grains (3).jpg">
+      sunfire grains (3).jpg
+     </a>
+    </li>
+    <li>
      <a href="twilight_vine (1).jpg">
       twilight vine (1).jpg
      </a>
@@ -273,6 +338,26 @@
     <li>
      <a href="twilight_vine_berries (5).jpg">
       twilight vine berries (5).jpg
+     </a>
+    </li>
+    <li>
+     <a href="velvet_blossom (1).jpg">
+      velvet blossom (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="velvet_blossom (2).jpg">
+      velvet blossom (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="velvet_blossom (3).jpg">
+      velvet blossom (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="velvet_blossom (4).jpg">
+      velvet blossom (4).jpg
      </a>
     </li>
     <li>
