--- a/campaign/items/consumables/herbs/index.html
+++ b/campaign/items/consumables/herbs/index.html
@@ -91,6 +91,16 @@
      </a>
     </li>
     <li>
+     <a href="Shimmering_Wheat.html">
+      Shimmering Wheat
+     </a>
+    </li>
+    <li>
+     <a href="Silverleaf_Orchard.html">
+      Silverleaf Orchard
+     </a>
+    </li>
+    <li>
      <a href="Starbloom_Blossom.html">
       Starbloom Blossom
      </a>
@@ -101,8 +111,18 @@
      </a>
     </li>
     <li>
+     <a href="Sunfire_Grains.html">
+      Sunfire Grains
+     </a>
+    </li>
+    <li>
      <a href="Twilight_Vine.html">
       Twilight Vine
+     </a>
+    </li>
+    <li>
+     <a href="Velvet_Blossom.html">
+      Velvet Blossom
      </a>
     </li>
     <li>
@@ -256,6 +276,56 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/shimmering_wheat (1).jpg">
+      img/shimmering_wheat (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/shimmering_wheat (2).jpg">
+      img/shimmering_wheat (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/shimmering_wheat (3).jpg">
+      img/shimmering_wheat (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/shimmering_wheat (4).jpg">
+      img/shimmering_wheat (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/silverleaf_fruit (1).jpg">
+      img/silverleaf_fruit (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/silverleaf_fruit (2).jpg">
+      img/silverleaf_fruit (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/silverleaf_orchard (1).jpg">
+      img/silverleaf_orchard (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/silverleaf_orchard (2).jpg">
+      img/silverleaf_orchard (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/silverleaf_orchard (3).jpg">
+      img/silverleaf_orchard (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/silverleaf_orchard (4).jpg">
+      img/silverleaf_orchard (4).jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/starbloom_blossom (1).jpg">
       img/starbloom_blossom (1).jpg
      </a>
@@ -296,6 +366,21 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/sunfire_grains (1).jpg">
+      img/sunfire_grains (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sunfire_grains (2).jpg">
+      img/sunfire_grains (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sunfire_grains (3).jpg">
+      img/sunfire_grains (3).jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/twilight_vine (1).jpg">
       img/twilight_vine (1).jpg
      </a>
@@ -333,6 +418,26 @@
     <li>
      <a class="image-index-link" href="img/twilight_vine_berries (5).jpg">
       img/twilight_vine_berries (5).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/velvet_blossom (1).jpg">
+      img/velvet_blossom (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/velvet_blossom (2).jpg">
+      img/velvet_blossom (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/velvet_blossom (3).jpg">
+      img/velvet_blossom (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/velvet_blossom (4).jpg">
+      img/velvet_blossom (4).jpg
      </a>
     </li>
     <li>
