--- a/campaign/locations/regions/Matella/Bakaria/Bakaria.html
+++ b/campaign/locations/regions/Matella/Bakaria/Bakaria.html
@@ -294,7 +294,10 @@
       are guardians of the forest. Covered in lush moss and adorned with vibrant flowers, they possess a deep connection to the earth and can manipulate plant life to defend their domain.
      </li>
      <li>
-      Whisperwing Owl: These ethereal owls possess feathers that shift colors with the changing light. Masters of silent flight and acute hearing, they are known for their ability to communicate in hushed whispers, conveying messages between the creatures of the forest.
+      <a href="../../../../creatures/animals/Whisperwing_Owl.html">
+       Whisperwing Owl
+      </a>
+      : These ethereal owls possess feathers that shift colors with the changing light. Masters of silent flight and acute hearing, they are known for their ability to communicate in hushed whispers, conveying messages between the creatures of the forest.
      </li>
      <li>
       Bramblefang Boar: These hulking boars have thick, bristling fur infused with natural thorns and razorsharp tusks. They are known for their territorial nature and fierce protectiveness over their young. Legends speak of their ability to charge through even the densest undergrowth.
