--- a/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
@@ -257,16 +257,36 @@
    <p class="first-paragraph">
     <ul>
      <li>
-      Sunfire Grains: These grains have a vibrant golden hue and are renowned for their high nutritional value. Sunfire grains are a local delicacy and soughtafter export, known for their nutty flavor and versatility in various culinary preparations.
+      <a href="../../../../items/consumables/herbs/Sunfire_Grains.html">
+       Sunfire Grains
+      </a>
+      : These grains have a vibrant golden hue and are renowned for their high nutritional value.
+      <a href="../../../../items/consumables/herbs/Sunfire_Grains.html">
+       Sunfire Grains
+      </a>
+      are a local delicacy and soughtafter export, known for their nutty flavor and versatility in various culinary preparations.
      </li>
      <li>
-      Velvet Blossom Tea Leaves: Grown in carefully tended gardens, the delicate leaves of the velvet blossom plant yield a soothing and aromatic tea known for its calming properties. This unique tea has gained popularity among tea connoisseurs in distant lands, becoming a coveted commodity.
+      <a href="../../../../items/consumables/herbs/Velvet_Blossom.html">
+       Velvet Blossom
+      </a>
+      Tea Leaves: Grown in carefully tended gardens, the delicate leaves of the
+      <a href="../../../../items/consumables/herbs/Velvet_Blossom.html">
+       Velvet Blossom
+      </a>
+      plant yield a soothing and aromatic tea known for its calming properties. This unique tea has gained popularity among tea connoisseurs in distant lands, becoming a coveted commodity.
      </li>
      <li>
-      Silverleaf Orchards: Orchards of the silverleaf trees dot the landscape of the Mentassa Plains, producing a rare and highly prized fruit. The silverleaf fruit is known for its exquisite taste, luscious texture, and captivating silver sheen. Its scarcity and unique flavor have made it a symbol of prosperity and indulgence.
+      <a href="../../../../items/consumables/herbs/Silverleaf_Orchard.html">
+       Silverleaf Orchard
+      </a>
+      : Orchards of the silverleaf trees dot the landscape of the Mentassa Plains, producing a rare and highly prized fruit. The silverleaf fruit is known for its exquisite taste, luscious texture, and captivating silver sheen. Its scarcity and unique flavor have made it a symbol of prosperity and indulgence.
      </li>
      <li>
-      Shimmering Wheat: A variety of wheat known for its shimmering golden hues, this crop not only serves as a staple food source but also finds use in ornamental decorations. Its distinctive appearance adds an enchanting touch to harvest festivals and celebratory events in the Mentassa Plains.
+      <a href="../../../../items/consumables/herbs/Shimmering_Wheat.html">
+       Shimmering Wheat
+      </a>
+      : A variety of wheat known for its shimmering golden hues, this crop not only serves as a staple food source but also finds use in ornamental decorations. Its distinctive appearance adds an enchanting touch to harvest festivals and celebratory events in the Mentassa Plains.
      </li>
     </ul>
    </p>
