Added some html files and images

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="amon_raheem.jpg">
+      amon raheem.jpg
+     </a>
+    </li>
+    <li>
      <a href="aria_thistlewood.jpg">
       aria thistlewood.jpg
      </a>
