--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="amon_raheem.html">
+      amon raheem
+     </a>
+    </li>
+    <li>
      <a href="aria_thistlewood.html">
       aria thistlewood
      </a>
@@ -158,6 +163,11 @@
     <li>
      <a class="image-index-link" href="img/alexander_whitmore.jpg">
       img/alexander_whitmore.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/amon_raheem.jpg">
+      img/amon_raheem.jpg
      </a>
     </li>
     <li>
