--- a/campaign/items/devices/index.html
+++ b/campaign/items/devices/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,38 +46,28 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD
+   Index of /home/awtorode/git/DnD/campaign/items/devices
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href=".git/index.html">
-      .git
+     <a href="ChronoLink_Nexus_Ethereal_Pocket_Portal.html">
+      ChronoLink Nexus Ethereal Pocket Portal
      </a>
     </li>
     <li>
-     <a href=".idea/index.html">
-      .idea
+     <a class="image-index-link" href="img/chronolink_nexus_ethereal_pocket_portal (1).jpg">
+      img/chronolink_nexus_ethereal_pocket_portal (1).jpg
      </a>
     </li>
     <li>
-     <a href="campaign/index.html">
-      campaign
+     <a class="image-index-link" href="img/chronolink_nexus_ethereal_pocket_portal (2).jpg">
+      img/chronolink_nexus_ethereal_pocket_portal (2).jpg
      </a>
     </li>
     <li>
-     <a href="css/index.html">
-      css
-     </a>
-    </li>
-    <li>
-     <a href="mmorpdnd.png">
-      mmorpdnd.png
-     </a>
-    </li>
-    <li>
-     <a href="templates/index.html">
-      templates
+     <a class="image-index-link" href="img/chronolink_nexus_ethereal_pocket_portal (3).jpg">
+      img/chronolink_nexus_ethereal_pocket_portal (3).jpg
      </a>
     </li>
    </ul>
