--- a/campaign/items/index.html
+++ b/campaign/items/index.html
@@ -61,6 +61,11 @@
      </a>
     </li>
     <li>
+     <a href="devices/index.html">
+      devices
+     </a>
+    </li>
+    <li>
      <a href="magic/index.html">
       magic
      </a>
