--- a/campaign/items/magic/index.html
+++ b/campaign/items/magic/index.html
@@ -50,6 +50,31 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Temporal_Cyrex_Crystal.html">
+      Temporal Cyrex Crystal
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/temporal_cyrex_crystals (1).jpg">
+      img/temporal_cyrex_crystals (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/temporal_cyrex_crystals (2).jpg">
+      img/temporal_cyrex_crystals (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/temporal_cyrex_crystals (3).jpg">
+      img/temporal_cyrex_crystals (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/temporal_cyrex_crystals (4).jpg">
+      img/temporal_cyrex_crystals (4).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
