--- a/campaign/items/treasure/index.html
+++ b/campaign/items/treasure/index.html
@@ -50,6 +50,31 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Cyrex_Gems.html">
+      Cyrex Gems
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/cyrex_gems (1).jpg">
+      img/cyrex_gems (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/cyrex_gems (2).jpg">
+      img/cyrex_gems (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/cyrex_gems (3).jpg">
+      img/cyrex_gems (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/cyrex_gems (4).jpg">
+      img/cyrex_gems (4).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
