--- a/campaign/lore/index.html
+++ b/campaign/lore/index.html
@@ -71,6 +71,11 @@
      </a>
     </li>
     <li>
+     <a href="guilds/index.html">
+      guilds
+     </a>
+    </li>
+    <li>
      <a href="history/index.html">
       history
      </a>
