--- a/campaign/lore/guilds/img/index.html
+++ b/campaign/lore/guilds/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,38 +46,18 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD
+   Index of /home/awtorode/git/DnD/campaign/lore/guilds/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href=".git/index.html">
-      .git
+     <a href="gardeners_guild_crest.jpg">
+      gardeners guild crest.jpg
      </a>
     </li>
     <li>
-     <a href=".idea/index.html">
-      .idea
-     </a>
-    </li>
-    <li>
-     <a href="campaign/index.html">
-      campaign
-     </a>
-    </li>
-    <li>
-     <a href="css/index.html">
-      css
-     </a>
-    </li>
-    <li>
-     <a href="mmorpdnd.png">
-      mmorpdnd.png
-     </a>
-    </li>
-    <li>
-     <a href="templates/index.html">
-      templates
+     <a href="tinkers_guild_crest.jpg">
+      tinkers guild crest.jpg
      </a>
     </li>
    </ul>
