Added some html files and images

--- a/campaign/lore/guilds/img/index.html
+++ b/campaign/lore/guilds/img/index.html
@@ -60,6 +60,11 @@
       tinkers guild crest.jpg
      </a>
     </li>
+    <li>
+     <a href="wanderers_guild_crest.jpg">
+      wanderers guild crest.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
