--- a/campaign/quests/manastorm_legal_advisors/img/index.html
+++ b/campaign/quests/manastorm_legal_advisors/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,38 +46,18 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/lore/guilds
+   Index of /home/awtorode/git/DnD/campaign/quests/manastorm_legal_advisors/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Gardener's_Guild.html">
-      Gardener's Guild
+     <a href="contract (1).jpg">
+      contract (1).jpg
      </a>
     </li>
     <li>
-     <a href="Tinkers Guild.html">
-      Tinkers Guild
-     </a>
-    </li>
-    <li>
-     <a href="Wanderers_Guild.html">
-      Wanderers Guild
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/gardeners_guild_crest.jpg">
-      img/gardeners_guild_crest.jpg
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/tinkers_guild_crest.jpg">
-      img/tinkers_guild_crest.jpg
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/wanderers_guild_crest.jpg">
-      img/wanderers_guild_crest.jpg
+     <a href="contract (2).jpg">
+      contract (2).jpg
      </a>
     </li>
    </ul>
