--- a/campaign/quests/manastorm_legal_advisors/index.html
+++ b/campaign/quests/manastorm_legal_advisors/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Manastorm_Legal_Advisors.html">
+      Manastorm Legal Advisors
+     </a>
+    </li>
+    <li>
      <a href="contract_PS.jpg">
       contract PS.jpg
      </a>
@@ -63,6 +68,16 @@
     <li>
      <a href="parchment.jpg">
       parchment.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/contract (1).jpg">
+      img/contract (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/contract (2).jpg">
+      img/contract (2).jpg
      </a>
     </li>
    </ul>
